fixed overflow-x bug

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html {
     scroll-behavior: smooth !important;
+    overflow-x: hidden;
 }
 
 .bg-dark {
@@ -74,10 +75,13 @@ body {
 
 main {
     flex-grow: 1;
+    margin-top: 4rem;
 }
 
 header {
     background-color: rgba(22, 22, 22, 0.95);
+    position: fixed !important;
+    width: 100%;
 }
 
 .logo {
